<resources>
    <string name="app_name">Calc</string>
    <string name="calculator_field"></string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="plus">+</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="minus">-</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="mul">*</string>
    <string name="clear">C</string>
    <string name="zero">0</string>
    <string name="div">/</string>
    <string name="eval">=</string>
    <string name="calc">Calculate</string>
    <string name="dot">.</string>
    <string name="unexpectedInputError">Looks like you have entered something illegal lol xD</string>
    <string name="undefinedError">Undefined expression</string>
</resources>