<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/calcFieldLabel"
        android:layout_weight="3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculator_field"
        android:textSize="30sp"
        android:gravity="center"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonEval"
        android:text="@string/calc" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            style="@style/CalcButton"
            android:id="@+id/buttonOne"
            android:text="@string/one" />
        <Button
            style="@style/CalcButton"
            android:id="@+id/buttonTwo"
            android:text="@string/two"/>
        <Button
            style="@style/CalcButton"
            android:id="@+id/buttonThree"
            android:text="@string/three" />
        <Button
            style="@style/CalcButton"
            android:id="@+id/buttonPlus"
            android:text="@string/plus"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            style="@style/CalcButton"
            android:id="@+id/buttonFour"
            android:text="@string/four" />
        <Button
            style="@style/CalcButton"
            android:id="@+id/buttonFive"
            android:text="@string/five"/>
        <Button
            style="@style/CalcButton"
            android:id="@+id/buttonSix"
            android:text="@string/six"/>
        <Button
            style="@style/CalcButton"
            android:id="@+id/buttonMinus"
            android:text="@string/minus"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            style="@style/CalcButton"
            android:id="@+id/buttonSeven"
            android:text="@string/seven"/>
        <Button
            style="@style/CalcButton"
            android:id="@+id/buttonEight"
            android:text="@string/eight"/>
        <Button
            style="@style/CalcButton"
            android:id="@+id/buttonNine"
            android:text="@string/nine"/>
        <Button
            style="@style/CalcButton"
            android:id="@+id/buttonMul"
            android:text="@string/mul"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            style="@style/CalcButton"
            android:id="@+id/buttonZero"
            android:text="@string/zero" />
        <Button
            style="@style/CalcButton"
            android:id="@+id/buttonClear"
            android:text="@string/clear" />
        <Button
            style="@style/CalcButton"
            android:id="@+id/buttonDot"
            android:text="@string/dot" />
        <Button
            style="@style/CalcButton"
            android:id="@+id/buttonDiv"
            android:text="@string/div"/>
    </LinearLayout>
</LinearLayout>